--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,5 +9,5 @@ metadata:
 spec:
   type: website
   lifecycle: production
-  owner: locakrd-team
+  owner: lockard-team
   system: appsheet-clipboard
