--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,8 +6,9 @@ metadata:
   annotations:
     github.com/project-slug: nathanlo9/appsheet-clipboard
     backstage.io/techdocs-ref: dir:. 
-spec:
+    backstage.io/adr-location: docs/adrs
   type: website
   lifecycle: production
   owner: lockard-team
   system: appsheet-clipboard
+
